app/static/common/css/graph.css
.timeaxis-g path,
.timeaxis-g line {
    fill: none;
    stroke: black;
    stroke-width: 1px;

}

.yaxis-g path,
.yaxis-g line {
    fill: none;
    stroke: black;
    stroke-width: 1px;
}

.linepaths-g path {
    stroke: blue;
    stroke-width: 1;
    fill: none;
}

circle.circle-cursor {
    fill: blue;
}

rect.rect-zoom-pan{
    fill: none;
    visibility: hidden;
    pointer-events: all;
}

rect.rect-cursor{
    stroke: black;
    stroke-width: 2;
    fill: white;
}

